Refactor code, fix copy button bug and add code to change button text for 1 sec

--- a/booking/templates/booking/book_thankyou.html
+++ b/booking/templates/booking/book_thankyou.html
@@ -9,8 +9,7 @@
       <div class="d-flex gap-4 mb-5 justify-content-between align-items-center">
         <h2>Thank You!</h2>
         <h6>
-          <u>{{ obj.company.company_name }}</u> has received your booking,
-          and will confirm your booking shortly.
+          <u>{{ obj.company.company_name }}</u> has received your booking.
         </h6>
       </div>
 
@@ -23,23 +22,17 @@
               <p class="fs-3 fw-bold">{{ obj.company.address }}</p>
             </div>
             <div class="col-sm-6 col-md-4">
-              <p class="mb-0 fs-5 fw-semibold">Name:</p>
+              <p class="mb-0 fs-5 fw-semibold">Phone:</p>
               <p class="fs-3 fw-bold">
-                {{ obj.customer}}
+                {{ obj.company.phone }}
               </p>
             </div>
           </div>
 
           <div class="row mb-md-5">
             <div class="col-sm-6 col-md-4"><p class="mb-0 fs-5 fw-semibold">
-              Status:</p><p class="fs-3 fw-bold">
-              {% if obj.booking_status == 'P' %}
-              Pending
-              {% elif obj.booking_status == 'A' %}
-              Accepted
-              {% else %}
-              Rejected
-              {% endif %}
+              Your Name:</p><p class="fs-3 fw-bold">
+              {{ obj.customer }}
             </p></div>
             <div class="col-sm-6 col-md-4"><p class="mb-0 fs-5 fw-semibold">Time:</p><p class="fs-3 fw-bold">{{ obj.date_time }}</p></div>
             <div class="col-sm-6 col-md-4"><p class="mb-0 fs-5 fw-semibold">Spots/Guests:</p><p class="fs-3 fw-bold">{{ obj.spots }}</p></div>
@@ -60,14 +53,29 @@
             <div class="col-sm-6 d-flex w-auto gap-3 py-3 align-items-center">
               <p class="d-inline mb-0 fs-5 fw-semibold">URL:</p>
               <p id="booking-url" class="d-none d-xl-block mb-0 text-dark fs-5 fw-bold">{{ request.build_absolute_uri }}</p>
-              <button type="button" class="btn btn-light" style="height: 1.8rem; --bs-btn-padding-y: 0; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .7rem;" onclick="copyURL()">Copy URL</button>
+              <button id="copyBtn" type="button" class="btn btn-light" style="height: 1.8rem; --bs-btn-padding-y: 0; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .7rem;" onclick="copyURL()">Copy URL</button>
             </div>
             <script>
-              function copyURL() {
-                const copyURL = document.querySelector("#booking-url");
-                navigator.clipboard.writeText(copyURL.innerText);
-                alert("Copied :)");
+              async function copyURL() {
+                const copyURL = document.querySelector("#booking-url").innerHTML;
+                await navigator.clipboard.writeText(copyURL);
               }
+
+              // Copy function based on:
+              // https://stackoverflow.com/questions/39610661/how-to-change-the-button-text-on-click-for-a-short-duration-only-using-javascrip
+              document.getElementById('copyBtn').addEventListener('click', function (clicked) {
+                  return function () {
+                    if (!clicked) {
+                      var last = this.innerHTML;
+                      this.innerHTML = 'Copied';
+                      clicked = true;
+                      setTimeout(function () {
+                          this.innerHTML = last;
+                          clicked = false;
+                      }.bind(this), 1000);
+                    }
+                  };
+                }(false), this);
             </script>
           </div>
 
