Add lang=en + change main container to fluid

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <!DOCTYPE html>
-<html class="h-100">
+<html lang="en" class="h-100">
 
 <head>
 
@@ -108,8 +108,7 @@
     </div>
   </nav>
 
-  <main class="container-sm mt-5 mb-5 main-bg">
-
+  <main class="container-fluid mt-5 mb-5 px-0 main-bg">
     {% block content %}
     <!-- Body Content -->
     {% endblock content %}
