Change top-level container from fluid to sm

--- a/booking/templates/booking/book_company.html
+++ b/booking/templates/booking/book_company.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-  <div class="container-fluid justify-content-center booking">
+  <div class="container-sm justify-content-center booking">
     <div class="row gap-4 mb-5 align-items-center">
       <!-- New Company Booking Form -->
       <div class="col-md order-md-2">
