--- a/booking/templates/booking/book_delete.html
+++ b/booking/templates/booking/book_delete.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% load crispy_forms_tags %}
 
-  <div class="container-fluid booking">
+  <div class="container-sm booking">
     <div class="row justify-content-center">
       <!-- Booking Customer Delete -->
 
