--- a/booking/templates/booking/book_deleted.html
+++ b/booking/templates/booking/book_deleted.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-  <div class="container-fluid booking">
+  <div class="container-sm booking">
     <div class="row justify-content-center">
       <!-- Booking Customer Delete Confirmation -->
 
