--- a/company/templates/company/edit_company.html
+++ b/company/templates/company/edit_company.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% load crispy_forms_tags %}
 
-  <div class="container company">
+  <div class="container-sm company">
     <div class="row justify-content-center">
       <!-- Edit Company Form -->
 
