--- a/company/templates/company/pending_company.html
+++ b/company/templates/company/pending_company.html
@@ -4,7 +4,7 @@
 
 {% load crispy_forms_tags %}
 
-  <div class="container-fluid company">
+  <div class="container-sm company">
     <div class="row">
       <!-- Company Pending -->
 
