--- a/booking/templates/booking/book_already_booked.html
+++ b/booking/templates/booking/book_already_booked.html
@@ -2,20 +2,20 @@
 
 {% block content %}
 
-  <div class="container-fluid booking">
-    <div class="row justify-content-center">
-      <!-- Booking Customer Already Booked -->
+    <div class="container-sm booking">
+      <div class="row justify-content-center">
+        <!-- Booking Customer Already Booked -->
 
-      <div class="col-md-6 mt-3">
-        <div class="row">
+        <div class="col-md-6 mt-3">
+          <div class="row">
 
-          <h2 class="px-0">Hang on a sec!</h2>
-          <h6 class="mb-3 px-0">We got on file that you on {{ booking.placed_at}}, booked with the same day and time.</h6>
-          <a class="btn btn-outline-primary btn-sm" href="javascript:history.back()">See Booking</a>
+            <h2 class="px-0">Hang on a sec!</h2>
+            <h6 class="mb-3 px-0">We got on file that you on {{ booking.placed_at}}, booked with the same day and time.</h6>
+            <a class="btn btn-outline-primary btn-sm" href="javascript:history.back()">See Booking</a>
 
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
 {% endblock content %}
