--- a/company/templates/company/add_company.html
+++ b/company/templates/company/add_company.html
@@ -3,29 +3,30 @@
 {% block content %}
 {% load crispy_forms_tags %}
 
-<div class="container-fluid company">
-  <div class="row justify-content-center">
+  <div class="container-sm company">
+    <div class="row justify-content-center">
 
-    <!-- New Company Signup Form -->
-    <div class="col-md-8 mt-3">
-      <div class="row">
+      <!-- New Company Signup Form -->
+      <div class="col-md-8 mt-3">
+        <div class="row">
 
-        {% if user.is_authenticated %}
+          {% if user.is_authenticated %}
 
-        <h2>Add Company Profile</h2>
-        <h6>Please fill out your company details below:</h6>
+          <h2>Add Company Profile</h2>
+          <h6>Please fill out your company details below:</h6>
 
-        <form class="company_form" method="post" enctype="multipart/form-data" style="margin-top: 1.2em">
-          {% csrf_token %}
-          {{ company_form | crispy }}
-          <button type="submit" class="btn btn-primary btn-lg btn-block">Submit</button>
-        </form>
+          <form class="company_form" method="post" enctype="multipart/form-data" style="margin-top: 1.2em">
+            {% csrf_token %}
+            {{ company_form | crispy }}
+            <button type="submit" class="btn btn-primary btn-lg btn-block">Submit</button>
+          </form>
 
-        {% endif %}
+          {% endif %}
 
+        </div>
       </div>
+
     </div>
   </div>
-</div>
 
 {% endblock content %}
