--- a/company/templates/company/delete_company.html
+++ b/company/templates/company/delete_company.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% load crispy_forms_tags %}
 
-  <div class="container-fluid company">
+  <div class="container-sm company">
     <div class="row justify-content-center">
       <!-- Company Delete -->
 
@@ -27,6 +27,7 @@
 
         </div>
       </div>
+
     </div>
   </div>
 
