--- a/company/templates/company/exists.html
+++ b/company/templates/company/exists.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-  <div class="container-fluid company">
+  <div class="container-sm company">
     <div class="row">
       <!-- Company Exists -->
 
