--- a/booking/templates/booking/google_api.html
+++ b/booking/templates/booking/google_api.html
@@ -1,5 +1,9 @@
 <!--Variables for google_map.js script-->
+{% block content %}
+
 {{ context.google_api_key|json_script:'google_api_key' }}
 {{ context.company_name|json_script:'company_name' }}
 {{ context.latitude|json_script:'latitude' }}
 {{ context.longitude|json_script:'longitude' }}
+
+{% endblock content %}
