--- a/company/templates/company/cloudinary.html
+++ b/company/templates/company/cloudinary.html
@@ -1,10 +1,14 @@
+{% block content %}
+
 {% load cloudinary %}
 {% cloudinary_includes %}
 {% cloudinary_js_config %}
-<script type="text/javascript">
-  $(function() {
-    if($.fn.cloudinary_fileupload !== undefined) {
-      $("input.cloudinary-fileupload[type=file]").cloudinary_fileupload();
-    }
-  });
-</script>
+  <script type="text/javascript">
+    $(function() {
+      if($.fn.cloudinary_fileupload !== undefined) {
+        $("input.cloudinary-fileupload[type=file]").cloudinary_fileupload();
+      }
+    });
+  </script>
+
+{% endblock content %}
