Add images for sections and add company account info section

--- a/baseapp/templates/index.html
+++ b/baseapp/templates/index.html
@@ -26,12 +26,7 @@
 
       <h2 class="display-5 fw-bold text-white">Why Bookable</h2>
       <div class="col-lg-6 mx-auto">
-        <p class="fs-5 mb-4">Because ...</p>
-        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-          <p>Icon</p>
-          <p>Icon</p>
-          <p>Icon</p>
-        </div>
+        <p class="fs-5 mb-4">Bookable is simple, straight forward, easy, fast and reliable. Bookable can handle millions of requests at any time and still hungry for more, which means your bookings will never be interrupted.</p>
       </div>
 
     </div>
@@ -41,15 +36,15 @@
     <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
 
       <div class="col-10 col-sm-8 col-lg-6">
-        <img src="#" class="d-block mx-lg-auto img-fluid" alt="#" width="700" height="500" loading="lazy">
+        <img src="/static/media/company-account-booking-list.jpg" class="d-block mx-lg-auto img-fluid" alt="Company account booking list" width="700" height="294" loading="lazy">
       </div>
 
       <div class="col-lg-6">
-        <h2 class="display-5 fw-bold lh-1 mb-3">Feature</h2>
-        <p class="lead">Explanation</p>
-        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-          <p>icon</p>
-          <p>icon</p>
+        <h2 class="display-5 fw-bold lh-1 mb-3">Booking List</h2>
+        <p class="lead">See all booking in a simple and straight forward view. For every booking the most important details are shown, for you to quickly take action.</p>
+        <div class="d-grid gap-2 d-flex justify-content-md-start">
+          <img src="/static/media/calendar.png" class="d-block opacity-50" alt="calender icon" width="48" height="30" loading="lazy">
+          <img src="/static/media/passport.png" class="d-block opacity-50" alt="passport icon" width="48" height="30" loading="lazy">
         </div>
       </div>
 
@@ -60,15 +55,34 @@
     <div class="row flex-lg align-items-center g-5 py-5">
 
       <div class="col-10 col-sm-8 col-lg-6">
-        <img src="#" class="d-block mx-lg-auto img-fluid" alt="#" width="700" height="500" loading="lazy">
+        <img src="/static/media/company-booking-page.jpg" class="d-block mx-lg-auto img-fluid" alt="Company booking page" width="700" height="666" loading="lazy">
       </div>
 
       <div class="col-lg-6">
-        <h2 class="display-5 fw-bold lh-1 mb-3">Feature</h2>
-        <p class="lead">Explanation</p>
+        <h2 class="display-5 fw-bold lh-1 mb-3">Booking Page</h2>
+        <p class="lead">A beautiful and converting booking page straight to the point with no distrations. All information your customer needs or would want is easily accessible to them.</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-          <p>icon</p>
-          <p>icon</p>
+          <img src="/static/media/info.png" class="d-block opacity-50" alt="calender icon" width="15" height="30" loading="lazy">
+          <img src="/static/media/map.png" class="d-block opacity-50" alt="passport icon" width="48" height="30" loading="lazy">
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <div class="container col-xxl-8 px-4 py-5">
+    <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+
+      <div class="col-10 col-sm-8 col-lg-6">
+        <img src="/static/media/company-account-info.jpg" class="d-block mx-lg-auto img-fluid" alt="Company account info" width="700" height="389" loading="lazy">
+      </div>
+
+      <div class="col-lg-6">
+        <h2 class="display-5 fw-bold lh-1 mb-3">Company Info</h2>
+        <p class="lead">Add, edit and delete your company information easily in your account by pressing one button. We've made it our mission for our app to be simple, easy and straight forward.</p>
+        <div class="d-grid gap-2 d-flex justify-content-md-start">
+          <img src="/static/media/company-glyph.png" class="d-block opacity-50" alt="calender icon" width="30" height="30" loading="lazy">
+          <img src="/static/media/globe.png" class="d-block opacity-50" alt="passport icon" width="30" height="30" loading="lazy">
         </div>
       </div>
 
