--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -26,7 +26,7 @@ h1, h2, h3, h4, h5, h6, figure {
 .fa-brands, .fab {
     font-style: normal;
     color: white;
-  }
+}
 
 .light-bg {
     background-color: #fff;
@@ -38,6 +38,10 @@ h1, h2, h3, h4, h5, h6, figure {
 
 .main-bg {
     background-color: #F9FAFC;
+}
+
+main.container-fluid.mt-5.mb-5.px-0.main-bg {
+    padding-top: 6rem;
 }
 
 input {
