--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
 
   <!-- Navigation -->
 
-  <nav class="sticky-top navbar navbar-expand-lg navbar-light bg-white">
+  <nav class="fixed-top navbar navbar-expand-lg navbar-light bg-white">
     <div class="container-xl">
       {% if request.user.is_authenticated %}
         <a class="navbar-brand" href="{% url 'home' %}">
