Refactor footer & add target blank to links

--- a/templates/base.html
+++ b/templates/base.html
@@ -116,11 +116,13 @@
 
   <!-- Footer -->
   <footer class="footer mt-auto py-3 dark-bg">
-    <p class="m-0 text-center text-white">Made by @MTraveller</p>
-    <p class="m-0 text-center text-white">Find me at:
-        <a href="https://github.com/MTraveller"><i class="fa-brands fa-square-github ms-3"></i></a>
-        <a href="https://www.linkedin.com/in/mtantouri/"><i class="fa-brands fa-linkedin ms-3"></i></a>
-    </p>
+    <div class="container-sm d-flex gap-3">
+      <p class="m-0 text-center text-white">Made by @MTraveller</p>
+      <p class="m-0 text-center text-white">Find me at:
+        <a href="https://github.com/MTraveller" target="_blank"><i class="fa-brands fa-square-github ms-3"></i></a>
+        <a href="https://www.linkedin.com/in/mtantouri/" target="_blank"><i class="fa-brands fa-linkedin ms-3"></i></a>
+      </p>
+    </div>
 
     <!--Load Scripts-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
