--- a/templates/base.html
+++ b/templates/base.html
@@ -12,8 +12,7 @@
   <link rel="preconnect" href="https://cdn.jsdelivr.net">
 
   <!--Load favicon-->
-  <link rel="icon" type="image/x-icon"
-        href="https://raw.githubusercontent.com/MTraveller/bookable/main/media/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/daxqnc8yw/image/upload/v1661260307/static/media/favicon.a009085fa82e.ico">
 
   <!--Load fonts-->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
