Override bootstrap styles for a tag in footer

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -56,6 +56,11 @@ input[type="checkbox"] {
     width: auto;
 }
 
+footer a {
+    color: white;
+    text-decoration: none;
+}
+
 /* Index Page Styles */
 
 .bg-dark {
