Adjust bootstrap classes

--- a/baseapp/templates/index.html
+++ b/baseapp/templates/index.html
@@ -32,8 +32,8 @@
     </div>
   </div>
 
-  <div class="container col-xxl-8 px-4 py-5">
-    <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+  <div class="container col-xxl-8 px-4 py-sm-5">
+    <div class="row flex-lg-row-reverse justify-content-center align-items-center g-5 py-5">
 
       <div class="col-10 col-sm-8 col-lg-6">
         <img src="https://res.cloudinary.com/daxqnc8yw/image/upload/v1661260304/static/media/company-account-booking-list.507f0d978d4d.jpg" class="d-block mx-lg-auto img-fluid" alt="Company account booking list" width="700" height="294" loading="lazy">
@@ -51,8 +51,8 @@
     </div>
   </div>
 
-  <div class="container col-xxl-8 px-4 py-5">
-    <div class="row flex-lg align-items-center g-5 py-5">
+  <div class="container col-xxl-8 px-4 py-sm-5">
+    <div class="row flex-lg justify-content-center align-items-center g-5 py-5">
 
       <div class="col-10 col-sm-8 col-lg-6">
         <img src="https://res.cloudinary.com/daxqnc8yw/image/upload/v1661260306/static/media/company-booking-page.023f118fd05e.jpg" class="d-block mx-lg-auto img-fluid" alt="Company booking page" width="700" height="666" loading="lazy">
@@ -61,7 +61,7 @@
       <div class="col-lg-6">
         <h2 class="display-5 fw-bold lh-1 mb-3">Booking Page</h2>
         <p class="lead">A beautiful and converting booking page straight to the point with no distrations. All information your customer needs or would want is easily accessible to them.</p>
-        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+        <div class="d-grid gap-2 d-flex justify-content-md-start">
           <img src="https://res.cloudinary.com/daxqnc8yw/image/upload/v1661260302/static/media/info.efe801d1e90d.png" class="d-block opacity-50" alt="calender icon" width="15" height="30" loading="lazy">
           <img src="https://res.cloudinary.com/daxqnc8yw/image/upload/v1661260309/static/media/map.9a69f34a0958.png" class="d-block opacity-50" alt="passport icon" width="48" height="30" loading="lazy">
         </div>
@@ -70,8 +70,8 @@
     </div>
   </div>
 
-  <div class="container col-xxl-8 px-4 py-5">
-    <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+  <div class="container col-xxl-8 px-4 py-sm-5">
+    <div class="row flex-lg-row-reverse justify-content-center align-items-center g-5 py-5">
 
       <div class="col-10 col-sm-8 col-lg-6">
         <img src="https://res.cloudinary.com/daxqnc8yw/image/upload/v1661260306/static/media/company-account-info.aefa98030163.jpg" class="d-block mx-lg-auto img-fluid" alt="Company account info" width="700" height="389" loading="lazy">
