Refactor footer and remove roboto font

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,8 +14,7 @@
   <!--Load favicon-->
   <link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/daxqnc8yw/image/upload/v1661260307/static/media/favicon.a009085fa82e.ico">
 
-  <!--Load fonts-->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+  <!--Load font-->
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap" rel="stylesheet">
 
   <!--Primary Meta Tags-->
@@ -107,7 +106,7 @@
     </div>
   </nav>
 
-  <main class="container-fluid mt-5 mb-5 px-0 main-bg">
+  <main class="container-fluid mt-sm-5 mb-5 px-0 main-bg">
     {% block content %}
     <!-- Body Content -->
     {% endblock content %}
@@ -115,12 +114,10 @@
 
   <!-- Footer -->
   <footer class="footer mt-auto py-3 dark-bg">
-    <div class="container-sm d-flex gap-3">
-      <p class="m-0 text-center text-white">Made by @MTraveller</p>
-      <p class="m-0 text-center text-white">Find me at:
-        <a href="https://github.com/MTraveller" target="_blank"><i class="fa-brands fa-square-github ms-3"></i></a>
-        <a href="https://www.linkedin.com/in/mtantouri/" target="_blank"><i class="fa-brands fa-linkedin ms-3"></i></a>
-      </p>
+    <div class="container-sm d-flex align-items-center gap-2 gap-md-3">
+      <p class="m-0 text-center text-white">@MTraveller</p>
+      <a class="ms-2 ms-md-3 text-decoration-none" href="https://github.com/MTraveller" target="_blank"><i class="fa-brands fa-square-github text-light fs-3 text fst-normal"></i></a>
+      <a class="ms-2 ms-md-3 text-decoration-none" href="https://www.linkedin.com/in/mtantouri/" target="_blank"><i class="fa-brands fa-linkedin text-light fs-3 text fst-normal"></i></a>
     </div>
 
     <!--Load Scripts-->
