Add href tell: to phone number

--- a/booking/templates/booking/book_thankyou.html
+++ b/booking/templates/booking/book_thankyou.html
@@ -24,7 +24,7 @@
             <div class="col-sm-6 col-md-4">
               <p class="mb-0 fs-5 fw-semibold">Phone:</p>
               <p class="fs-3 fw-bold">
-                {{ obj.company.phone }}
+                <a href="tel:{{ obj.company.phone }}">{{ obj.company.phone }}</a>
               </p>
             </div>
           </div>
