--- a/baseapp/templates/index.html
+++ b/baseapp/templates/index.html
@@ -6,7 +6,7 @@
 
     <h2 class="display-4 fw-bold">Simply Bookable</h2>
     <div class="col-lg-6 mx-auto">
-      <p class="lead mb-4">Simply put; we take care of all your bookings and make it easy for your customers to book while at the same time booking management is simple. We believe you should be focusing on what you love doing mostly.</p>
+      <p class="lead mb-4">Simply put, we take care of all your bookings and make it easy for your customers to book while at the same time, booking management is simple. We believe you should be focusing on what you love doing most.</p>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
         <a class="btn btn-primary btn-lg px-4 me-sm-3" href="{% url 'account_signup' %}" role="button">Register</a>
         <a class="btn btn-outline-secondary btn-lg px-4" href="/contact/" role="button">Contact</a>
@@ -26,7 +26,7 @@
 
       <h2 class="display-5 fw-bold text-white">Why Bookable</h2>
       <div class="col-lg-6 mx-auto">
-        <p class="fs-5 mb-4">Bookable is simple, straight forward, easy, fast and reliable. Bookable can handle millions of requests at any time and still hungry for more, which means your bookings will never be interrupted.</p>
+        <p class="fs-5 mb-4">Bookable is simple, straightforward, easy, fast, and reliable. Bookable can handle millions of requests anytime and is still hungry for more, so your bookings will never be interrupted.</p>
       </div>
 
     </div>
@@ -41,7 +41,7 @@
 
       <div class="col-lg-6">
         <h2 class="display-5 fw-bold lh-1 mb-3">Booking List</h2>
-        <p class="lead">See all booking in a simple and straight forward view. For every booking the most important details are shown, for you to quickly take action.</p>
+        <p class="lead">See all bookings in a simple, not cluttered view or distractions. For every booking, essential details are there for you to take action quickly.</p>
         <div class="d-grid gap-2 d-flex justify-content-md-start">
           <img src="https://res.cloudinary.com/daxqnc8yw/image/upload/v1661260303/static/media/calendar.75020cab19ec.png" class="d-block opacity-50" alt="calender icon" width="48" height="30" loading="lazy">
           <img src="https://res.cloudinary.com/daxqnc8yw/image/upload/v1661260305/static/media/passport.8e878abb517d.png" class="d-block opacity-50" alt="passport icon" width="48" height="30" loading="lazy">
@@ -60,7 +60,7 @@
 
       <div class="col-lg-6">
         <h2 class="display-5 fw-bold lh-1 mb-3">Booking Page</h2>
-        <p class="lead">A beautiful and converting booking page straight to the point with no distrations. All information your customer needs or would want is easily accessible to them.</p>
+        <p class="lead">You get a beautiful and converting booking page straight to the point with no distractions. All information your customer needs or would want is easily accessible to them.</p>
         <div class="d-grid gap-2 d-flex justify-content-md-start">
           <img src="https://res.cloudinary.com/daxqnc8yw/image/upload/v1661260302/static/media/info.efe801d1e90d.png" class="d-block opacity-50" alt="calender icon" width="15" height="30" loading="lazy">
           <img src="https://res.cloudinary.com/daxqnc8yw/image/upload/v1661260309/static/media/map.9a69f34a0958.png" class="d-block opacity-50" alt="passport icon" width="48" height="30" loading="lazy">
@@ -79,7 +79,7 @@
 
       <div class="col-lg-6">
         <h2 class="display-5 fw-bold lh-1 mb-3">Company Info</h2>
-        <p class="lead">Add, edit and delete your company information easily in your account by pressing one button. We've made it our mission for our app to be simple, easy and straight forward.</p>
+        <p class="lead">Add, edit and delete your company information quickly in your account by pressing one button. We've made it our mission for our app to be simple, easy, and on point.</p>
         <div class="d-grid gap-2 d-flex justify-content-md-start">
           <img src="https://res.cloudinary.com/daxqnc8yw/image/upload/v1661260304/static/media/company-glyph.bd63ba2814f6.png" class="d-block opacity-50" alt="calender icon" width="30" height="30" loading="lazy">
           <img src="https://res.cloudinary.com/daxqnc8yw/image/upload/v1661260308/static/media/globe.b1db8c3f680d.png" class="d-block opacity-50" alt="passport icon" width="30" height="30" loading="lazy">
@@ -95,7 +95,7 @@
       <div class="col-md-6 mb-3 mb-sm-0">
         <div class="h-100 p-5 text-bg-dark bg-gradient rounded-3">
           <h2>Join us today</h2>
-          <p>No more fiddling with bookings and where they are. Missed and forgotten appointments are of the past. Together we move into a new era, building a strong business. </p>
+          <p>Missed and forgotten appointments are of the past; no more frustrations. Together we move into a new era, building a solid business.</p>
           <a class="btn btn-outline-light" href="{% url 'account_signup' %}" role="button">Join Us</a>
         </div>
       </div>
@@ -103,7 +103,7 @@
       <div class="col-md-6">
         <div class="h-100 p-5 text-bg-secondary bg-gradient border rounded-3">
           <h2>Got a question or two?</h2>
-          <p>Don't let us keep you waiting, simply send us an email and we'll be more than happy to answer all questions you may have. We stand ready to assist you in your journey.</p>
+          <p>Don't let us keep you waiting. Send us an email, and we'll be more than happy to answer all questions you may have. We stand ready to assist you in your journey.</p>
           <a class="btn btn-outline-light" href="/contact/" role="button">Contact Us</a>
         </div>
       </div>
