Add social media card url

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,24 +21,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="title" content="Bookable - Booking Made Simple">
-  <meta name="description" content="Bookable is a django app for companies looking to accept bookings online">
+  <meta name="description" content="Bookable is a Django app for companies looking to accept bookings online">
   <meta name="author" content="MT - MTraveller, https://github.com/MTraveller/bookable">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://mt-bookable.herokuapp.com/">
   <meta property="og:title" content="Bookable - Booking Made Simple">
-  <meta property="og:description" content="Bookable is a django app for companies looking to accept bookings online">
-  <meta property="og:image"
-      content="#">
+  <meta property="og:description" content="Bookable is a Django app for companies looking to accept bookings online">
+  <meta property="og:image" content="https://res.cloudinary.com/daxqnc8yw/image/upload/v1661364639/static/media/social-media-card.151a46799220.jpg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://mt-bookable.herokuapp.com/">
   <meta property="twitter:title" content="Bookable - Booking Made Simple">
-  <meta property="twitter:description" content="Bookable is a django app for companies looking to accept bookings online">
-  <meta property="twitter:image"
-      content="#">
+  <meta property="twitter:description" content="Bookable is a Django app for companies looking to accept bookings online">
+  <meta property="twitter:image" content="https://res.cloudinary.com/daxqnc8yw/image/upload/v1661364639/static/media/social-media-card.151a46799220.jpg">
 
   <!--Load CSS-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/brands.min.css">
