--- a/templates/base.html
+++ b/templates/base.html
@@ -54,51 +54,44 @@
 <body class="d-flex flex-column h-100 main-bg">
 
   <!-- Navigation -->
-
   <nav class="fixed-top navbar navbar-expand-lg navbar-light bg-white">
     <div class="container-xl">
-      {% if request.user.is_authenticated %}
-        <a class="navbar-brand" href="{% url 'home' %}">
-          <span class="brand">Booka<span class="thin">ble</span></span>
-        </a>
-      {% else %}
-        <a class="navbar-brand" href="{% url 'home' %}">
-          <span class="brand">Booka<span class="thin">ble</span></span>
-        </a>
-      {% endif %}
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarText">
+      <a class="navbar-brand" href="{% url 'home' %}">
+        <span class="brand">Booka<span class="thin">ble</span>
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
           </li>
           {% if user.is_authenticated %}
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'company_account' %}">Account</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
-            </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'company_account' %}">Account</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
+          </li>
           {% else %}
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'account_signup' %}">Register</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'account_login' %}">Login</a>
-            </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'account_signup' %}">Register</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'account_login' %}">Login</a>
+          </li>
           {% endif %}
         </ul>
         {% if user.is_authenticated %}
-          <span class="navbar-text signed-in">
-            <span>Signed in as:
-          {% if user %}
-            {{ user.first_name }}
-          {% else %}
-            {{ context.user.first_name }}
-          {% endif %}
-          </span>
+        <span class="navbar-text signed-in">
+          <span>Signed in as:
+        {% if user %}
+          {{ user.first_name }}
+        {% else %}
+          {{ context.user.first_name }}
+        {% endif %}
+        </span>
         {% endif %}
       </div>
     </div>
