--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-<div class="container">
+<div class="container mt-5 mt-sm-0 pt-5 pt-sm-0">
   <div class="row justify-content-center">
     <div class="col-md-6 mt-3">
       <h3>{% trans "Sign Out" %}</h3>
