--- a/booking/templates/booking/book_delete.html
+++ b/booking/templates/booking/book_delete.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% load crispy_forms_tags %}
 
-  <div class="container-sm booking">
+  <div class="container-sm mt-5 mt-sm-0 pt-5 pt-sm-0 booking">
     <div class="row justify-content-center">
       <!-- Booking Customer Delete -->
 
