--- a/booking/templates/booking/book_form_not_valid.html
+++ b/booking/templates/booking/book_form_not_valid.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-  <div class="container-sm company">
+  <div class="container-sm mt-5 mt-sm-0 pt-5 pt-sm-0 company">
     <div class="row justify-content-center">
       <!-- Company Form Not Valid -->
 
