--- a/booking/templates/booking/book_spots_filled.html
+++ b/booking/templates/booking/book_spots_filled.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-  <div class="container-sm booking">
+  <div class="container-sm mt-5 mt-sm-0 pt-5 pt-sm-0 booking">
     <div class="row justify-content-center">
       <!-- Booking Customer Spots Filled -->
 
