--- a/templates/base.html
+++ b/templates/base.html
@@ -119,7 +119,7 @@
     <!--Load Cloudinary & JS/GoogleMaps-->
     {% include 'company/cloudinary.html' %}
     {{ google_api_key|json_script:'google_api_key' }}
-    <script type="text/javascript" src="{% static 'js/google_places.0cb348d95e8d.js' %}"></script>
+    <script type="text/javascript" src="{% static 'static/js/google_places.0cb348d95e8d.js' %}"></script>
     {% endif %}
 
     {% if request.path == context.booking_path %}
