--- a/booking/templates/booking/book_company_does_not_exist.html
+++ b/booking/templates/booking/book_company_does_not_exist.html
@@ -10,7 +10,7 @@
         <!-- <div class="row"> -->
 
           <h2 class="px-0">{{ company }}</h2>
-          <div class="col-4 d-grid gap-1">
+          <div class="col d-grid gap-1">
             <h3 class="mt-0">Does not exist!</h3>
             <h6 class="mb-3 px-0">Please check the URL given to you.</h6>
           </div>
