--- a/booking/templates/booking/book_does_not_exist.html
+++ b/booking/templates/booking/book_does_not_exist.html
@@ -7,10 +7,10 @@
       <!-- Booking Does Not Exist -->
 
       <div class="col-md-8 mt-3">
-        <div class="row">
+        <div class="row px-3 px-sm-0">
 
           <h2 class="px-0">Item Does Not Exist</h2>
-          <div class="col-4 d-grid gap-3 px-0">
+          <div class="col col-md-4 d-grid gap-3 px-0">
             <h6 class="mb-3 px-0">Make a new booking?</h6>
             <a class="btn btn-outline-primary" href="/booking/{{ obj.slug }}/">Book Now</a>
           </div>
