--- a/company/templates/company/inactive_company.html
+++ b/company/templates/company/inactive_company.html
@@ -4,7 +4,7 @@
 
 {% load crispy_forms_tags %}
 
-  <div class="container-sm company">
+  <div class="container-sm mt-5 mt-sm-0 company">
     <div class="row">
       <!-- Company Disapproved -->
 
