--- a/company/templates/company/account.html
+++ b/company/templates/company/account.html
@@ -7,7 +7,7 @@
   <!-- Company Account -->
   {% if user.is_authenticated %}
 
-  <div class="container-sm">
+  <div class="container-sm mt-5 mt-sm-0">
     <div class="row justify-content-center">
 
       <div class="col-md-10">
