--- a/company/templates/company/form_company_not_valid.html
+++ b/company/templates/company/form_company_not_valid.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-  <div class="container-sm company">
+  <div class="container-sm mt-5 mt-sm-0 company">
     <div class="row justify-content-center">
       {% if user.is_authenticated %}
       <!-- Company Form Not Valid -->
